# LaytonHamster

./: .coveragerc  .gitignore  README.md  main.py  setup.cfg
src/hamster/: board.py
src/hamster/algos/: genetic.py  path.py
src/hamster/graphic/: board_drawer.py  terminal.py
src/hamster/items/: __init__.py  apple.py  base_item.py  hamster.py  item_types.py
src/hamster/utils/: utils.py
tests/: test_board.py  test_hamster.py  test_path.py  test_position.py
