[metadata]
name = hamster
description = layton hamster package
author = Anddy Seruga
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    hamster
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24


[flake8]
max-line-length = 120